--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -378,8 +378,8 @@ label{
 }
 /* Center the image and position the close button */
 .imgcontainer {
-    text-align: right;
-    margin-bottom: -25px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .form-container {
@@ -392,33 +392,14 @@ span.psw {
     padding-top: 16px;
 }
 
-/* The Modal (background) */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    padding-top: 60px;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto;
-    border: 1px solid #888;
-    width: 400px;
-}
-
 /* The Close Button (x) */
 .close {
     color: #000;
     font-size: 35px;
     font-weight: bold;
+    position: absolute;
+    top: 5px;
+    right: 10px;
 }
 
 .close:hover,
@@ -427,21 +408,6 @@ span.psw {
     cursor: pointer;
 }
 
-/* Add Zoom Animation */
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
-}
-    
-@keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
-}
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
